did gallery with infinite scroll

--- a/src/index.html
+++ b/src/index.html
@@ -7,24 +7,12 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <form class="search-form" id="search-form">
-      <input
-        type="text"
-        name="searchQuery"
-        autocomplete="off"
-        placeholder="Search images..."
-      />
-      <button type="submit"></button>
-    </form>
-
     <div class="container">
-      <div class="gallery">
-        <!-- Картки зображень -->
-      </div>
-
-      <button type="button" class="load-more">Load more</button>
+        <ul class="list">
+          <li class="list-item"><a href="./01-with-load-more-btn.html">Pixabay gallery using load more button</a></li>
+          <li class="list-item"><a href="./02-with-infinite-scroll.html">Pixabay gallery using infinite scroll</a></li>
+        </ul>
     </div>
-
-    <script type="module" src="./index.js"></script>
+    
   </body>
 </html>
