added a check for an empty input

--- a/src/02-with-infinite-scroll.html
+++ b/src/02-with-infinite-scroll.html
@@ -19,6 +19,7 @@
         </div>
         <div class="guard"></div>
         
+        <div class="loader hidden"></div>
         <button type="button" class="btn-scroll-up hidden">Go up</button>
     </div>
     
